--- a/views/bio.hbs
+++ b/views/bio.hbs
@@ -1,4 +1,11 @@
+<h1>Welcome to {{bioData.plant_name}}'s bio page!</h1>
+<img src="/images/{{bioData.avatar}}" alt="bio image">
+<h3>About {{bioData.name}}</h3>
+<p>{{bioData.bio}}</p> 
+
+{{!-- 
 <h1>Welcome to {{bioData.name}}'s bio page!</h1>
 <img src="/images/{{bioData.avatar}}" alt="bio image">
 <h3>About {{bioData.name}}</h3>
-<p>{{bioData.bio}}</p>
+<p>{{bioData.bio}}</p> 
+ --}}
