--- a/views/bio.hbs
+++ b/views/bio.hbs
@@ -6,7 +6,9 @@
     <div id="plantInfo">
         <p><strong>Name:</strong> {{bioData.name}}</p>
         {{!-- <p><strong>Family:</strong> {{bioData.family}}</p> --}}
+        <p><strong>Family:</strong> {{bioData.family}}</p>
         <p><strong>Origin:</strong> {{bioData.origin}}</p>
+        <br>
         <p><strong>Description:</strong> {{bioData.bio}}</p> 
     </div>
 </div>
